updated html and css to try to prevent wrapping issue

--- a/spec/caroline.css
+++ b/spec/caroline.css
@@ -3,25 +3,52 @@
     height: 100%;
     position: relative;
     overflow: auto;
+	font-family:Arial, Helvetica, sans-serif;
+	color:#333;
+	display:block;
+}
+
+/*left side styles*/
+
+.left {
+	width:30%;
+	margin:.2em;
+	padding:.2em;
+	display:block;
+	float:left;
+	position:relative;
 }
 .js-multigraph-tester-mugl {
     float: left;
-    width: 33%;
+    width: 100%;
     height: 100%;
     border-right: 1px solid rgba(192, 192, 192, 0.7);
-    padding: 0px 10px;
+    padding: auto;
 }
 .js-multigraph-tester-textarea {
     position: relative;
     width:100%;
     height:100%;
 }
+
+/*right side styles*/
+
+.right {
+	width:65%;
+	margin:.2em;
+	padding:.2em;
+	display:block;
+	float:left;
+	position:relative;
+}
+
+
 .js-multigraph-tester-display {
     position: relative;
     float: left;
-    width: 63%;
+    width: 100%;
     height: 100%;
-    padding: 0px 10px;
+    padding: auto;
     overflow: auto;
 }
 .js-multigraph-tester-graph {
